update to java 10 fix deprecated methods